--- a/engineer/themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/themes/dark_rainbow/templates/theme/base.html
@@ -81,8 +81,7 @@
             </section>
         {% endblock -%}
         {%- block section_sidebar %}
-            <section id="sidebar" class="
-                    {%- block section_sidebar_class %}three columns{% endblock -%}">
+            <section id="sidebar" class="{%- block section_sidebar_class %}three columns{% endblock -%}">
                 {%- block section_sidebar_content %}
                     {% include 'theme/_sidebar.html' %}
                 {% endblock -%}
