--- a/engineer/themes/dark_rainbow/templates/theme/_sidebar.html
+++ b/engineer/themes/dark_rainbow/templates/theme/_sidebar.html
@@ -1,2 +1,7 @@
-<p class="replace_me">You should customize the sidebar content.</p>
-<p class="replace_me">You can do this by adding a 'theme/_sidebar.html' template to your templates directory.</p>
+<section class="basic">
+    <p class="replace_me">You should customize the sidebar content.</p>
+
+    <p class="replace_me">You can do this by adding a 'theme/_sidebar.html' template to your templates directory.</p>
+</section>
+
+{% include "theme/_twitter.html" %}
