--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -30,12 +30,12 @@
         {% if theme.use_foundation %}
             {# FOUNDATION CSS #}
             <link rel="stylesheet"
-                  href="{{ engineer.foundation_url }}stylesheets/grid.css">
+                  href="{{ settings.ENGINEER.FOUNDATION_CSS_URL }}stylesheets/grid.css">
             <link rel="stylesheet"
-                  href="{{ engineer.foundation_url }}stylesheets/mobile.css">
+                  href="{{ settings.ENGINEER.FOUNDATION_CSS_URL }}stylesheets/mobile.css">
 
             <!--[if lt IE 9]>
-            <link rel="stylesheet" href="{{ engineer.foundation_url }}stylesheets/ie.css">
+            <link rel="stylesheet" href="{{ settings.ENGINEER.FOUNDATION_CSS_URL }}stylesheets/ie.css">
         <![endif]-->
         {% endif %}
     {% endblock %}
@@ -45,7 +45,7 @@
     {% block lesscss %}
         {% if theme.use_lesscss %}
             {% if settings.USE_CLIENT_SIDE_LESS %}
-                <script src="{{ engineer.lesscss_url }}"
+                <script src="{{ settings.ENGINEER.LESS_JS_URL }}"
                         type="text/javascript">
                 </script>
                 {% if DEBUG %}
@@ -62,7 +62,7 @@
 
     {% block modernizr %}
         {% if theme.use_modernizr %}
-            <script src="{{ engineer.modernizr_url }}"
+            <script src="{{ settings.ENGINEER.MODERNIZR_URL }}"
                     type="text/javascript"></script>
         {% endif %}
     {% endblock %}
@@ -72,14 +72,14 @@
             <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
             <script>
-                window.jQuery || document.write('<script src="{{ engineer.jquery_url }}jquery-1.6.2.min.js"><\/script>')
+                window.jQuery || document.write('<script src="{{ settings.ENGINEER.JQUERY_URL }}"><\/script>')
             </script>
         {%- endif %}
     {% endblock %}
 
     {% block twitter %}
         {% if theme.twitter_id %}
-            <script type="text/javascript" src="{{ engineer.tweet_url }}"></script>
+            <script type="text/javascript" src="{{ settings.ENGINEER.TWEET_URL }}"></script>
             <script type='text/javascript'>
                 jQuery(function ($) {
                     $(".tweet").tweet({
@@ -106,7 +106,7 @@
 
 {% block foundation_js %}
     {% if theme.use_foundation -%}
-        <script src="{{ engineer.foundation_url }}javascripts/foundation.js"></script>
+        <script src="{{ settings.ENGINEER.FOUNDATION_CSS_URL }}javascripts/foundation.js"></script>
     {%- endif %}
 {% endblock %}
 
