--- a/sample_site/templates/theme/_sidebar.html
+++ b/sample_site/templates/theme/_sidebar.html
@@ -1,4 +1,4 @@
-<div>
+<section>
     <p>Welcome to the Engineer sample site.</p>
     <hr/>
     <nav>
@@ -7,4 +7,4 @@
             <li><a href="{{ urlname('themes') }}">themes</a></li>
         </ul>
     </nav>
-</div>
+</section>
