Use correct Engineer URL.

--- a/engineer/templates/core/_powered_by.html
+++ b/engineer/templates/core/_powered_by.html
@@ -1,1 +1,1 @@
-<p>Powered by <a href="http://github.com/tylerbutler/engineer">engineer</a>.</p>
+<p>Powered by <a href="http://tylerbutler.com/projects/engineer">engineer</a>.</p>
