Blockquote styles and max width.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -8,6 +8,11 @@
     background-color: yellow;
 }
 
+// Max width for the site
+.row {
+    max-width: 1000px;
+}
+
 // Variables //
 @border: 5px solid @purple;
 
@@ -68,6 +73,15 @@ blockquote {
 
     p, div {
         font-style: italic;
+
+        strong {
+            font-weight: bold;
+        }
+
+        em {
+            font-weight: bold;
+            font-style: normal;
+        }
     }
 }
 
