Reorganizing theme files so they make a bit more sense and match the documentation.

--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -42,7 +42,11 @@
         {% endif %}
     {% endblock %}
 
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+        {% block stylesheets_include %}
+            {% include ['_stylesheets.html', 'theme/_stylesheets.html'] ignore missing %}
+        {% endblock %}
+    {% endblock %}
 
     {% block lesscss %}
         {% if theme.use_lesscss %}
@@ -60,7 +64,11 @@
         {% endif %}
     {% endblock %}
 
-    {% block scripts_top %}{% endblock %}
+    {% block scripts_top %}
+        {% block scripts_top_include %}
+            {% include ['_scripts_top.html', 'theme/_scripts_top.html'] ignore missing %}
+        {% endblock %}
+    {% endblock %}
 
     {% block modernizr %}
         {% if theme.use_modernizr %}
@@ -116,6 +124,10 @@
     {%- endif %}
 {% endblock %}
 
-{% block scripts_bottom %}{% endblock %}
+{% block scripts_bottom %}
+    {% block scripts_bottom_include %}
+        {% include ['_scripts_bottom.html', 'theme/_scripts_bottom.html'] ignore missing %}
+    {% endblock %}
+{% endblock %}
 </body>
 </html>
