--- a/engineer/themes/dark_rainbow/templates/theme/template_page_simple.html
+++ b/engineer/themes/dark_rainbow/templates/theme/template_page_simple.html
@@ -1,4 +1,6 @@
-{% extends 'theme/template_page_base.html' %}
+{# A simple template page layout that includes the default site sidebar. #}
+
+{% extends '/theme/template_page_base.html' %}
 
 {% block page_title %}Simple Template Page{% endblock %}
 
