--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -14,12 +14,15 @@
 }
 
 // Variables //
-@border: 5px solid @purple;
+@border: 5 pxsolid@purple
+;
 
 ////////////////////
 // ELEMENT STYLES //
 ////////////////////
-.link-color(@green, @orange);
+.link-color(@green, @orange)
+
+;
 
 body {
     background-color: @bg;
@@ -120,13 +123,11 @@ article {
     }
 
     h2 {
-        .font-size-medium(.8, .2);
-        //font-weight: bold;
+        .font-size-medium(.8, .2); //font-weight: bold;
     }
 
     h3, h4, h5, h6 {
-        .font-size-default(.8, .2);
-        //font-weight: bold;
+        .font-size-default(.8, .2); //font-weight: bold;
     }
 
     p:first-child {
@@ -141,8 +142,7 @@ article {
     padding-right: 10px;
 }
 
-pre, code, div.codehilite {
-    // nice scrollbars in webkit
+pre, code, div.codehilite { // nice scrollbars in webkit
     ::-webkit-scrollbar {
         height: 10px;
         width: 10px;
@@ -154,11 +154,11 @@ pre, code, div.codehilite {
     }
 
     ::-webkit-scrollbar-track-piece {
-        background: @bg-accent;//#d0d0d0;
+        background: @bg-accent; //#d0d0d0;
     }
 
     ::-webkit-scrollbar-thumb:vertical, ::-webkit-scrollbar-thumb:horizontal {
-        background: @blue;//#999;
+        background: @blue; //#999;
         .border-radius(5px);
         display: block;
         height: 50px;
@@ -200,9 +200,8 @@ header#primary {
         .font-size-xxl(1, 0);
         .margin-calc(@line-height-double, .9, .1, -5px, -5px);
         .link-color-single(@strong-blue);
-        float: left;
-        //.six.columns();
-        //.phone-one;
+        float: left; //.six.columns();
+    //.phone-one;
     }
 
     nav {
@@ -246,16 +245,14 @@ header#secondary {
 
 // POSTS
 @media only screen and (min-width: 767px) {
-    .post-info {
-        //margin-top: 10px;
+    .post-info { //margin-top: 10px;
         font-family: museo-slab;
         text-align: center;
 
         .post-date {
-            .font-size-default(1, 0);
-            //margin-top: 10px;
-            //margin-bottom: 10px;
-            //padding-bottom: 10px;
+            .font-size-default(1, 0); //margin-top: 10px;
+        //margin-bottom: 10px;
+        //padding-bottom: 10px;
             text-transform: uppercase;
             @calendar-border: 1px dotted @purple;
             border-bottom: @calendar-border;
@@ -298,7 +295,7 @@ header#secondary {
         }
 
         .permalink, .attribution {
-            &:before{
+            &:before {
                 content: " • ";
             }
         }
@@ -333,48 +330,53 @@ header#secondary {
         ul li {
             padding-right: 0;
         }
-        ul li:not(:last-child) {
-            &:after {
-                content: "/";
-                padding-left: 9px;
-                padding-right: 5px;
-            }
-        }
 
-        &.twitter {
-            .text-left;
-
-            h1 {
-                .text-center;
-                .font-size-medium(0, .5);
-            }
-
-            ul {
-                li {
-                    text-indent: 0;
-                    padding-right: 0;
-                    display: block;
-                }
-
-                li:not(:last-child):after {
-                        height: 0px;
-                        border-bottom: 3px dotted @purple;
-                        width: 20%;
-                        display: block;
-                        margin: .5em auto;
-                        content: "";
-                }
-            }
-
-            .tweet_time {
-                display: block;
-                .font-size-tiny(0, 0);
-                .text-right;
-                text-transform: uppercase;
-            }
-        }
+ul li:not(:last-child) {
+    &:after {
+        content: "/";
+        padding-left: 9px;
+        padding-right: 5px;
     }
 }
+
+&.twitter {
+    .text-left;
+
+    h1 {
+        .text-center;
+        .font-size-medium(0, .5);
+    }
+
+    ul {
+        li {
+            text-indent: 0;
+            padding-right: 0;
+            display: block;
+        }
+
+li:not(:last-child):after {
+    height: 0px;
+    border-bottom: 3px dotted @purple;
+    width: 20%;
+    display: block;
+    margin: .5em auto;
+    content: "";
+}
+
+    }
+
+.tweet_time {
+    display: block;
+    .font-size-tiny(0, 0);
+    .text-right;
+    text-transform: uppercase;
+}
+
+    }
+
+    }
+
+    }
 
 // FOOTER
 footer {
@@ -387,8 +389,7 @@ footer {
 
 .archives {
     h2 {
-        .font-size-large(.2, 0);
-        //margin-top: 10px;
+        .font-size-large(.2, 0); //margin-top: 10px;
     }
     article {
         border-bottom: 1px dotted @purple;
@@ -432,8 +433,7 @@ ul.tags {
     li {
         display: inline-block;
         height: @line-height-default;
-        line-height: @line-height-default;
-        //white-space: pre;
+        line-height: @line-height-default; //white-space: pre;
     }
 
     .link-color(@light-blue, @orange);
@@ -461,7 +461,7 @@ ul.tags {
             border-color: transparent @bg-accent transparent transparent;
             border-style: solid;
             border-width: 10px 10px 10px 0;
-	    }
+        }
 
         &:after {
             content: "";
