Moved solarized LESS file to a shared location.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -2,7 +2,7 @@
 @import "_mixins.less";
 @import "_colors.less";
 @import "_typography.less";
-@import "_solarized.less";
+@import "../../engineer/_solarized.less";
 
 .replace_me {
     background-color: yellow;
