--- a/engineer/themes/dark_rainbow/templates/theme/_single_post.html
+++ b/engineer/themes/dark_rainbow/templates/theme/_single_post.html
@@ -12,7 +12,7 @@
                     </div>
                 {% endwith %}
             </div>
-            {% if post.tags.count > 0 %}
+            {% if post.tags|count > 0 %}
                 <ul class="tags">
                     {% for tag in post.tags %}
                         <li><a href="{{ urlname('tag', tag) }}">{{ tag }}</a>
