Add some image/caption styles.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -134,6 +134,21 @@ article {
     }
 }
 
+.image {
+    .border-radius(5px);
+    background-color: @bg-accent;
+    padding: 10px 10px 0 10px;
+    width: 500px;
+
+    &.caption {
+        padding: 10px 10px 0 10px;
+        p {
+            font-size: 1.5rem;
+            padding-bottom: 8px;
+        }
+    }
+}
+
 // PYGMENTS / CODE
 .linenodiv {
     color: @light;
