--- a/engineer/static/engineer/_base_mixins.less
+++ b/engineer/static/engineer/_base_mixins.less
@@ -66,3 +66,14 @@
 .text-center {
     text-align: center;
 }
+
+.image {
+    &.center {
+        margin: auto;
+        display: block;
+        text-align: center;
+    }
+
+    &.caption {
+    }
+}
